--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Tomb Finance | FTM pegged algocoin" />
+    <meta name="description" content="Bomb Money | FTM pegged algocoin" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Amarante&display=swap"
       rel="stylesheet"
     />
-    <title>Tomb Finance</title>
+    <title>Bomb Money</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
