--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Bomb Money | FTM pegged algocoin" />
+    <meta name="description" content="Bomb Money | BTC pegged algocoin" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
