--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,15 @@
       href="https://fonts.googleapis.com/css2?family=Amarante&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-19R7Z015PN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-19R7Z015PN');
+    </script>
     <title>Bomb Money</title>
   </head>
   <body>
