light gui changes

--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Tahoma:wght@400&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Amarante&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Tahoma&display=swap"
       rel="stylesheet"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
