--- a/public/index.html
+++ b/public/index.html
@@ -47,4 +47,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <df-messenger intent="WELCOME" chat-title="bomb.money" agent-id="5eac80b1-81be-4751-8616-9bc5d634a16d"
+    language-code="en"></df-messenger> -->
 </html>
