--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
   <meta name="theme-color" content="#171923">
 
   <!-- <meta name="theme-color" content="#000000" /> -->
-  <meta name="description" content="Bomb Money | BTC pegged algocoin" />
+  <meta name="description" content="bomb.money is an algorithmic stablecoin on Binance Smart Chain. BOMB is pegged
+  to BTC at 10,000:1 ratio." />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
@@ -34,7 +35,7 @@
 
     gtag('config', 'G-19R7Z015PN');
   </script>
-  <title>Bomb Money</title>
+  <title>bomb.money</title>
 </head>
 
 <body style="background-color: #171923;">
