--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
 
 
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#171923">
-  <meta name="msapplication-TileColor" content="#171923">
-  <meta name="theme-color" content="#171923">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#100f01">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#000000">
 
   <!-- <meta name="theme-color" content="#000000" /> -->
   <meta name="description" content="bomb.money is an algorithmic stablecoin on Binance Smart Chain. BOMB is pegged
