--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   <title>bomb.money</title>
 </head>
 
-<body style="background-color: #171923;">
+<body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNTSW5V" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
