10mb testing update v1

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
   <meta name="theme-color" content="#000000">
 
   <!-- <meta name="theme-color" content="#000000" /> -->
-  <meta name="description" content="bomb.money is an algorithmic stablecoin on Binance Smart Chain. BOMB is pegged
-  to BTC at 10,000:1 ratio." />
+  <meta name="description" content="bomb.money is an algorithmic stablecoin on Binance Smart Chain. 10MB is pegged
+  to USDT at 10:1 ratio." />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
