--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,6 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
 
-  <!-- LMarketing Crypto Script -->
-  <script>
-    var _mtm = window._mtm = window._mtm || [];
-    _mtm.push({ 'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start' });
-    var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-    g.async = true; g.src = 'https://cdn.matomo.cloud/leanmarketingcrypto.matomo.cloud/container_pYL5AHPc.js'; s.parentNode.insertBefore(g, s);
-  </script>
-  <!-- End LMarketing Crypto Script -->
-
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -37,8 +28,8 @@
   <meta name="theme-color" content="#000000">
 
   <!-- <meta name="theme-color" content="#000000" /> -->
-  <meta name="description" content="bomb.money is an algorithmic stablecoin on Binance Smart Chain. 10MB is pegged
-  to USDT at 10:1 ratio." />
+  <meta name="description" content="10mb.finance is an algorithmic stablecoin on Cronos Chain. 10MB is pegged
+  to USDC at 10:1 ratio." />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
@@ -46,29 +37,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-19R7Z015PN"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-19R7Z015PN');
-  </script>
-  <title>bomb.money</title>
+  <title>10mb.finance</title>
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNTSW5V" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
 </body>
 <!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-  <df-messenger intent="WELCOME" chat-title="bomb.money" agent-id="5eac80b1-81be-4751-8616-9bc5d634a16d"
+  <df-messenger intent="WELCOME" chat-title="10mb.finance" agent-id="5eac80b1-81be-4751-8616-9bc5d634a16d"
     language-code="en"></df-messenger> -->
 
 </html>
